--- a/requirements.txt
+++ b/requirements.txt
@@ -1,362 +1,68 @@
-altair==4.1.0
-appdirs==1.4.4
-argh==0.26.2
-argon2-cffi
-arviz==0.11.2
-as==0.1
-asn1crypto
-astor==0.8.1
-astroid
-astropy
-async-generator
-atomicwrites==1.4.0
-attrs
-autopep8
-autoviz==0.0.81
-Babel
-backcall
-backoff==1.11.1
-backports.functools-lru-cache
-backports.shutil-get-terminal-size
-backports.tempfile
-backports.weakref==1.0.post1
-base58==2.1.0
-bitarray
-bkcharts==0.2
-black==19.10b0
-bleach
-blinker==1.4
-bokeh
-boltons==21.0.0
-boto==2.49.0
-Bottleneck==1.3.2
-Brotli==1.0.9
-brotlipy==0.7.0
-cachetools==4.2.2
-certifi==2020.12.5
-cffi
-cftime==1.5.0
-chardet
-chart-studio==1.1.0
-click
-click-spinner==0.1.10
-comtypes==1.1.9
-conda==4.11.0
-conda-build==3.21.4
-conda-content-trust
-conda-package-handling
-conda-repo-cli
-conda-token
-conda-verify==3.4.2
-contextlib2==0.6.0.post1
-convertdate==2.3.2
-cryptography
-cycler==0.10.0
-Cython
-cytoolz==0.11.0
-dacite==1.6.0
-dash==1.20.0
-dash-bootstrap-components==0.12.2
-dash-colorscales==0.0.4
-dash-core-components==1.16.0
-dash-daq==0.5.0
-dash-extensions==0.0.58
-dash-html-components==1.1.3
-dash-renderer==1.9.1
-dash-table==4.11.3
-dask
-datacommons==1.4.3
-datacommons-pandas==0.0.3
-datapane==0.12.3
-decorator
-defusedxml
-diff-match-patch
-distributed
-docutils
-dominate==2.6.0
-dtale==1.48.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+attrs==21.2.0
+backcall==0.2.0
+bleach==4.1.0
+certifi==2021.10.8
+cffi==1.15.0
+click==8.0.3
+colorama==0.4.4
+debugpy==1.5.1
+decorator==5.1.0
+defusedxml==0.7.1
 entrypoints==0.3
-ephem==4.0.0.2
-et-xmlfile==1.0.1
-face==20.1.1
-fastcache==1.1.0
-filelock
-flake8
-Flask
-Flask-Caching==1.10.1
-Flask-Compress==1.9.0
-Flask-Cors==3.0.10
-Flask-Login==0.5.0
-flask-ngrok==0.0.25
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.15.1
-fsspec
-furl==2.1.3
-future==0.18.2
-gevent
-gitdb==4.0.7
-GitPython==3.1.18
-glob2
-glom==20.11.0
-google-auth==1.35.0
-greenlet
-h5py==2.10.0
-HeapDict==1.0.1
-hijri-converter==2.1.3
-holidays==0.11.1
-html5lib
-htmlmin==0.1.12
-idna
-imagecodecs
-ImageHash==4.2.0
-imageio
-imagesize
-importlib-metadata==4.10.1
-importlib-resources==5.1.4
-iniconfig
-intervaltree
-ipykernel
-ipython
-ipython-genutils
-ipywidgets
-isort
-itsdangerous
-jdcal==1.4.1
-jedi
-Jinja2
-joblib
-json5==0.9.5
-jsonschema
-jupyter==1.0.0
-jupyter-client
-jupyter-console
-jupyter-core
-jupyter-packaging
-jupyter-server
-jupyterlab
-jupyterlab-pygments
-jupyterlab-server
-jupyterlab-widgets
-kaleido==0.2.1
-keyring
-kiwisolver
-korean-lunar-calendar==0.2.1
-lazy-object-proxy
-libarchive-c
-llvmlite==0.36.0
-locket==0.2.1
-logger==1.4
-login==0.0.6
-LunarCalendar==0.0.9
-lxml
-lz4==3.1.3
-MarkupSafe==1.1.1
-matplotlib
-mccabe==0.6.1
-menuinst==1.4.16
-micawber==0.5.4
-missingno==0.4.2
+et-xmlfile==1.1.0
+Flask==2.0.2
+importlib-resources==5.4.0
+ipykernel==6.6.0
+ipython==7.30.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+itsdangerous==2.0.1
+jedi==0.18.1
+Jinja2==3.0.3
+jsonschema==4.3.2
+jupyter-client==7.1.0
+jupyter-core==4.9.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.3
 mistune==0.8.4
-mkl-fft==1.3.0
-mkl-random
-mkl-service==2.3.0
-mock
-monotonic==1.6
-more-itertools
-mpmath==1.2.1
-msgpack
-multimethod==1.4
-multipledispatch==0.6.0
-multitasking==0.0.10
-munch==2.5.0
-mypy-extensions==0.4.3
-mysql-connector-python==8.0.25
-navigator-updater==0.2.1
-nbclassic
-nbclient
-nbconvert
-nbformat
-nest-asyncio
-netCDF4==1.5.7
-networkx
-nltk
-nose
-notebook
-numba
-numexpr
-numpy
-numpydoc
-oauthlib==3.1.1
-olefile==0.46
-openpyxl
-orderedmultidict==1.0.1
-packaging
-pandas
-pandas-datareader==0.10.0
-pandas-profiling==3.0.0
-pandas-visual-analysis==0.0.4
-pandocfilters
-paramiko
-parso==0.7.0
-partd
-path
-pathlib2
-pathspec==0.7.0
-patsy==0.5.1
-PDFNetPython3==9.0.0
-pep8==1.7.1
-pexpect
-phik==0.11.2
-pickleshare
-Pillow
-pkginfo==1.7.0
-plotly==4.14.3
-pluggy
-ply==3.11
-posthog==1.4.3
-ppscore==1.2.0
-prometheus-client
-prompt-toolkit
-protobuf==3.17.3
-psutil
-ptyprocess
-py
-pyarrow==4.0.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle
-pycosat==0.6.3
-pycparser
-pycurl==7.43.0.6
-pydantic==1.8.2
-pydeck==0.6.2
-pydocstyle
-pyerfa
-pyflakes
-Pygments
-pylint
-pyls-black
-pyls-spyder
-PyMeeus==0.5.11
-pymongo==3.12.0
-PyNaCl
-pyodbc===4.0.0-unsupported
-pyOpenSSL
-pyparsing
-pyreadline==2.1
-pyrsistent
-PySocks
-pystan==2.19.1.1
-pytest==6.2.3
-python-dateutil
-python-jsonrpc-server
-python-language-server
-pytz
-PyWavelets
-pywin32==227
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.4.1
-pyzmq==20.0.0
-QDarkStyle==2.8.1
-QtAwesome
-qtconsole
-QtPy==1.9.0
-regex
-requests
-requests-oauthlib==1.3.0
-requests-toolbelt==0.9.1
-retrying==1.3.3
-rope
-rsa==4.7.2
-Rtree
-ruamel-yaml-conda
-scikit-image==0.18.1
-scikit-learn
-scipy
-seaborn
-Send2Trash
-setuptools-git==1.2
-simplegeneric==0.8.1
-singledispatch
-sip==4.19.13
-six
-smmap==4.0.0
-sniffio
-snowballstemmer
-sort-dataframeby-monthorweek==0.4
-sorted-months-weekdays==0.2
-sortedcollections
-sortedcontainers
-soupsieve
-Sphinx==4.4.0
-sphinx-rtd-theme==1.0.0
-sphinxcontrib-applehelp
-sphinxcontrib-devhelp
-sphinxcontrib-htmlhelp==2.0.0
-sphinxcontrib-jsmath
-sphinxcontrib-qthelp
-sphinxcontrib-serializinghtml==1.1.5
-sphinxcontrib-websupport
-spyder
-spyder-kernels
-SQLAlchemy
-squarify==0.4.3
-statsmodels==0.12.2
-streamlit==0.87.0
-stringcase==1.2.0
-strsimpy==0.2.0
-sv==0.1
-sweetviz==2.1.2
-sympy
-tables==3.6.1
-tabulate==0.8.9
-tangled-up-in-unicode==0.1.0
-tblib
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-terminado==0.9.4
-testpath
-textdistance
-threadpoolctl
-three-merge
-tifffile
-toml
-toolz
-tornado
-tqdm
-traitlets
-tscv==0.1.2
-typed-ast
-typing-extensions
-tzlocal==2.1
-ujson
-unicodecsv==0.14.1
-urllib3
-validators==0.18.2
-vega-datasets==0.9.0
-visions==0.7.1
-watchdog
-wcwidth
+nbclient==0.5.9
+nbconvert==6.3.0
+nbformat==5.1.3
+nest-asyncio==1.5.4
+notebook==6.4.6
+numpy==1.21.5
+openpyxl==3.0.9
+packaging==21.3
+pandas==1.3.5
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
+plotly==5.5.0
+prometheus-client==0.12.0
+prompt-toolkit==3.0.24
+pycparser==2.21
+Pygments==2.10.0
+pyparsing==3.0.6
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+pytz==2021.3
+pywin32==303
+pywinpty==1.1.6
+pyzmq==22.3.0
+Send2Trash==1.8.0
+six==1.16.0
+tenacity==8.0.1
+terminado==0.12.1
+testpath==0.5.0
+tornado==6.1
+traitlets==5.1.1
+wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug
-widgetsnbextension==3.5.1
-win-inet-pton
-win-unicode-console==0.5
+Werkzeug==2.0.2
+widgetsnbextension==3.5.2
 wincertstore==0.2
-wordcloud==1.8.1
-wrapt==1.12.1
-WTForms==2.3.3
-xarray==0.18.2
-xgboost==1.4.2
-xlrd
-XlsxWriter
-xlwings==0.23.0
-xlwt==1.3.0
-xmltodict==0.12.0
-yapf
-yfinance==0.1.67
-zict==2.0.0
-zipp
-zope.event==4.5.0
-zope.interface
+zipp==3.6.0
